--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -1,1 +1,6 @@
-@import './navigate.scss'
+@import './navigate.scss';
+
+// body {
+//   height: 100%;
+//   font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
+// }
