--- a/src/assets/style/navigate.scss
+++ b/src/assets/style/navigate.scss
@@ -1,4 +1,13 @@
 #app {
-    
+//    .navigate-container{
+    //   height: 100%;
+    //   position: fixed;
+    //   font-size: 0px;
+    //   top: 0;
+    //   bottom: 0;
+    //   left: 0;
+
+//    }  
 
 }
+
