--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -1,6 +1,6 @@
 @import './navigate.scss';
 
-// body {
-//   height: 100%;
-//   font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
-// }
+body {
+  height: 100%;
+  font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
+}
